# AnagramsChainer

./: CMakeLists.txt  README.md  cppcheck.cmake
AnagramFinder/: AnagramFinder.cpp  AnagramFinder.h  CMakeLists.txt  config.h  utilities.cpp  utilities.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/testAnagramFinder/: CMakeLists.txt  testAnagramFinder.cpp  testAnagramFinder.h
